Add new init script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,6 @@ services:
       - "$PWD/prometheus/etc/prometheus:/etc/prometheus"
       - "$PWD/prometheus/data:/prometheus"
     restart: always
-    network_mode: bridge
 
   alertmanager:
     image: prom/alertmanager
@@ -19,21 +18,16 @@ services:
       - "$PWD/alertmanager/etc/alertmanager:/etc/alertmanager"
       - "$PWD/alertmanager/data:/alertmanager"
     restart: always
-    network_mode: bridge
 
   grafana:
     image: grafana/grafana
     volumes:
-      - "$PWD/grafana/etc/grafana.ini:/etc/grafana/grafana.ini:"
       - "$PWD/grafana/data:/var/lib/grafana"
     expose:
       - "3000"
-    environment:
-      - VIRTUAL_PORT=3000
-#      - LETSENCRYPT_TEST=true
-      - VIRTUAL_HOST=grafana.akira.cz
-      - LETSENCRYPT_HOST=grafana.akira.cz
-      - LETSENCRYPT_EMAIL=hufhendr@gmail.com
-
     restart: always
-    network_mode: bridge
+
+networks:
+  default:
+    external: true
+    name: prometheus
