--- a/acme-companion/docker-compose.yml
+++ b/acme-companion/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - dhparam:/etc/nginx/dhparam
       - certs:/etc/nginx/certs:ro
       - /var/run/docker.sock:/tmp/docker.sock:ro
-    network_mode: bridge
+    restart: always
 
   acme-companion:
     image: nginxproxy/acme-companion
@@ -25,7 +25,7 @@ services:
       - certs:/etc/nginx/certs:rw
       - acme:/etc/acme.sh
       - /var/run/docker.sock:/var/run/docker.sock:ro
-    network_mode: bridge
+    restart: always
 
 volumes:
   conf:
@@ -34,3 +34,7 @@ volumes:
   dhparam:
   certs:
   acme:
+
+networks:
+  default:
+    name: prometheus
