--- a/prometheus/etc/prometheus/prometheus.yml
+++ b/prometheus/etc/prometheus/prometheus.yml
@@ -26,6 +26,6 @@ scrape_configs:
 
     static_configs:
       - targets: ["localhost:9090"]
-      - targets: ["localhost:9091"]
+      - targets: ["pushgateway:9091"]
       - targets: ["demo.robustperception.io:9100"]
 #      - targets: ["192.168.1.50:9100"]
