--- a/prometheus/etc/prometheus/prometheus.yml
+++ b/prometheus/etc/prometheus/prometheus.yml
@@ -26,6 +26,31 @@ scrape_configs:
 
     static_configs:
       - targets: ["localhost:9090"]
-      - targets: ["pushgateway:9091"]
-      - targets: ["demo.robustperception.io:9100"]
+#      - targets: ["pushgateway:9091"]
+#      - targets: ["demo.robustperception.io:9100"]
 #      - targets: ["192.168.1.50:9100"]
+
+  - job_name: "node-exporter"
+    static_configs:
+      - targets: ['node-exporter:9100']
+
+  - job_name: 'snmp-exporter'
+    scrape_interval: 10s
+    scrape_timeout: 10s
+    static_configs:
+      - targets:
+        - 192.168.2.1  # MikroTik SNMP device.
+#        - 192.168.7.1 # ZyXEL nebere, zkusit nejprve via SNMP-EXPORTER
+#        - switch.local # SNMP device.
+    metrics_path: /snmp
+    params:
+      module: [mikrotik]
+#    params:
+#      module: [if_mib]
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: snmp-exporter:9116  # The SNMP exporter's real hostname:port.
