--- a/prometheus/etc/prometheus/prometheus.yml
+++ b/prometheus/etc/prometheus/prometheus.yml
@@ -27,5 +27,7 @@ scrape_configs:
     static_configs:
       - targets: ["localhost:9090"]
       - targets: ["pushgateway:9091"]
-      - targets: ["demo.robustperception.io:9100"]
-#      - targets: ["192.168.1.50:9100"]
+#      - targets: ["demo.robustperception.io:9100"]
+  - job_name: "node-exporter"
+    static_configs:
+      - targets: ['node-exporter:9100']
