--- a/prometheus/etc/prometheus/prometheus.yml
+++ b/prometheus/etc/prometheus/prometheus.yml
@@ -28,6 +28,28 @@ scrape_configs:
       - targets: ["localhost:9090"]
       - targets: ["pushgateway:9091"]
 #      - targets: ["demo.robustperception.io:9100"]
+#      - targets: ["192.168.1.50:9100"]
+
   - job_name: "node-exporter"
     static_configs:
       - targets: ['node-exporter:9100']
+
+  - job_name: 'snmp'
+    scrape_interval: 10s
+    scrape_timeout: 10s
+    static_configs:
+      - targets:
+        - router.lan  # MikroTik RB760iGS hEX S - hlavní router
+        - switch.lan  # Switch RB260GS - u serveru
+#        - hplj-m175.lan # potřebuje jiný modul
+#        - hpoj-9020.lan
+    metrics_path: /snmp
+    params:
+      module: [mikrotik]
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: snmp-exporter:9116  # The SNMP exporter's real hostname:port.
