--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - "$PWD/prometheus/data:/prometheus"
+      - "./prometheus/data:/prometheus"
     restart: always
 
   alertmanager:
@@ -20,7 +20,7 @@ services:
     ports:
       - "9093:9093"
     volumes:
-      - "$PWD/alertmanager/data:/alertmanager"
+      - "./alertmanager/data:/alertmanager"
     restart: always
 
   grafana:
@@ -29,7 +29,7 @@ services:
       dockerfile: Dockerfile
     container_name: grafana
     volumes:
-      - "$PWD/grafana/data:/var/lib/grafana"
+      - "./grafana/data:/var/lib/grafana"
     expose:
       - "3000"
     restart: always
@@ -65,7 +65,7 @@ services:
     expose:
       - "9116"
 #    volumes:
-#      - "$PWD/snmp-exporter:/etc/snmp-exporter"
+#      - "./snmp-exporter:/etc/snmp-exporter"
     restart: always
 
   nginx-proxy:
