--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,10 @@ services:
     container_name: grafana
     volumes:
       - "./grafana/data:/var/lib/grafana"
-    expose:
-      - "3000"
+    ports:
+      - "3000:3000"
+    # expose:
+    #   - "3000"
     restart: always
 
   pushgateway:
