--- a/prometheus/etc/prometheus/prometheus.yml
+++ b/prometheus/etc/prometheus/prometheus.yml
@@ -33,7 +33,10 @@ scrape_configs:
   - job_name: "node-exporter"
     static_configs:
       - targets: ['node-exporter:9100']
-
+      - targets: ["orange1.lan:9100"]
+      - targets: ["orange2.lan:9100"]
+      - targets: ["orange3.lan:9100"]
+      
   - job_name: 'snmp'
     scrape_interval: 10s
     scrape_timeout: 10s
