--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,9 @@ services:
     ports:
       - "3000:3000"
     restart: always
+    networks:
+      - prometheus
+      - nginx-proxy
 
   pushgateway:
     build:
@@ -65,3 +68,7 @@ services:
 #    volumes:
 #      - "./snmp-exporter:/etc/snmp-exporter"
     restart: always
+
+networks:
+  default:
+    name: prometheus
