--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,12 +28,12 @@ services:
     container_name: grafana
     volumes:
       - "./grafana/data:/var/lib/grafana"
+      - "./grafana/etc/grafana.ini:/etc/grafana/grafana.ini"
     ports:
       - "3000:3000"
     restart: always
     networks:
       - prometheus
-      - nginx-proxy
 
   pushgateway:
     build:
@@ -70,7 +70,7 @@ services:
     restart: always
 
 networks:
-  prometheus:
+  default:
     name: prometheus
     external: false
   nginx-proxy:
