Change the default network for Grafana

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       - "3000:3000"
     restart: always
     networks:
-      - prometheus
+      - default
 
   pushgateway:
     build:
