--- a/grafana/etc/grafana.ini
+++ b/grafana/etc/grafana.ini
@@ -128,6 +128,9 @@ domain = grafana.example.com
 [datasources]
 # Upper limit of data sources that Grafana will return. This limit is a temporary configuration and it will be deprecated when pagination will be introduced on the list data sources API.
 ;datasource_limit = 5000
+name = prometheus
+type = prometheus
+url = http://prometheus:9090
 
 #################################### Cache server #############################
 [remote_cache]
