--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,8 @@ services:
     container_name: grafana
     volumes:
       - "./grafana/data:/var/lib/grafana"
-      - "./grafana/etc/grafana.ini:/etc/grafana/grafana.ini"
+      # - "./grafana/etc/grafana.ini:/etc/grafana/grafana.ini"
+      - "./grafana/etc/provisioning:/etc/grafana/provisioning"
     ports:
       - "3000:3000"
     restart: always
